--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
-    <h2>Hi</h2>
+    <header>
+        <h1>Esto es una página web</h1>
+    </header>
+    <main>
+        <a href="www.google.com">Vamos a google</a>
+    </main>
 </body>
 </html>
