--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Esto es una página web</h1>
     </header>
     <main>
-        <a href="www.google.com">Vamos a google</a>
+        <a href="https://www.google.com">Vamos a google</a>
     </main>
 </body>
 </html>
