--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://galatea-dev.apps.ambientesbc.com/bds.min.css" type="text/css">
 </head>
 <body>
     <header>
         <h1>Esto es una página web</h1>
     </header>
     <main>
-        <a href="https://www.google.com">Vamos a google</a>
+        <a class="bc-link" href="https://www.google.com">Vamos a google</a>
     </main>
 </body>
 </html>
