--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://galatea-dev.apps.ambientesbc.com/bds.min.css" type="text/css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Esto es una página web</h1>
+        <h1>Esto es una <br>página web</h1>
     </header>
     <main>
         <a class="bc-link" href="https://www.google.com">Vamos a google</a>
